Fix content container overflow

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -12,17 +12,18 @@ a {
   color: inherit;
 }
 
-.main{
+.main {
   font-family: "Inter", sans-serif;
   background-color: $main-bg;
   color: $main-color;
 }
 
-.container{
+.container {
   display: flex;
+  overflow: hidden;
 }
 
-.menuContainer{
+.menuContainer {
   width: 250px;
   padding: 5px 20px;
   border-right: 2px solid $soft-bg;
@@ -32,7 +33,9 @@ a {
   }
 }
 
-.contentContainer{
+.contentContainer {
   padding: 5px 20px;
-  width: 100%;
+  min-width: 0;
+  max-width: 100%;
+  background-color: green;
 }
